[tool.poetry]
name = "airdrop-helper"
version = "0.1.0"
description = ""
authors = ["David Vilela <david.vilelafreire@valory.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
authlib = "1.2.0"
dag-cbor = "0.2.2"
jsonpatch = "1.32"
multiformats = "0.1.4.post3"
requests = "2.28.2"
jwcrypto = "^1.5.4"
pycryptodome = "3.18.0"
jsonschema = "4.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
